--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+
     "geopandas>=1.1.1",
     "osmnx>=2.0.6",
     "requests>=2.32.4",
@@ -15,6 +16,7 @@ example = [
   "matplotlib>=3.10.5",
   "numpy>=2.3.2",
   "contextily>=1.6.2",
+  "python-dotenv>=1.1.1",
 ]
 
 dev = [
