--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,7 @@ repos:
       - id: codespell
         additional_dependencies:
           - tomli
+        args: [--skip=*.ipynb]
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v3.6.0
     hooks:
