--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-
     "geopandas>=1.1.1",
+    "osmium>=4.2.0",
     "osmnx>=2.0.6",
     "requests>=2.32.4",
 ]
@@ -25,3 +25,8 @@ dev = [
 
 [tool.setuptools]
 packages = ["isochrones"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
