--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Build the project
         run: uv build
 
-      #- name: Run tests
-      #  run: uv run pytest tests
+      - name: Run tests
+        run: uv run pytest tests
