--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "geopandas>=1.1.1",
-    "osmium>=4.2.0",
     "osmnx>=2.0.6",
+    "pyogrio>=0.11.1",
     "requests>=2.32.4",
 ]
 
